tests/samples/negative/expressions/block_expression_empty.ax
module block_expression_empty;

fn main() -> i32 {
    let value = {
        let inner = 1;
    };
    return value;
}
